feat: Implement smooth scrolling and navbar adjustments
Enhances navigation by adding smooth scrolling to anchor links and adjusts the navbar's active section detection zone for better user experience. Introduces `scroll-padding-top` to the HTML element to account for the fixed navbar, ensuring content is not obscured.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -32,6 +32,9 @@
       }
     </script>
     <style>
+      html {
+        scroll-padding-top: 100px; /* Offset for fixed navbar */
+      }
       body {
         background-color: #1A1A1A;
         color: #F5F5F5;
