feat: Enhance landing page with SEO and AI features
This commit introduces several improvements to the METARIX landing page:

- **SEO Optimization:** Implemented comprehensive SEO meta tags (title, description, Open Graph) and JSON-LD schema for better search engine visibility and rich snippets.
- **Content Refinement:** Updated product naming to "Metarix Alive" and refined descriptions in FAQs and comparison sections for clarity and impact.
- **UI/UX Enhancements:** Added subtle visual flair to the mobile menu with a background gradient blob and improved hover states for interactive elements.
- **Feature Expansion:** Added "Language Support" to the comparison table, highlighting the extensive multilingual capabilities.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>METARIX | Smart AI Solutions</title>
+    
+    <!-- SEO & Open Graph Tags -->
+    <title>Metarix | AI Voice Agents & Business Automation Consulting</title>
+    <meta name="description" content="Deploy human-like AI Voice Agents for sales and support. Metarix combines 24/7 intelligent voice automation with strategic AI consulting for business growth." />
+
+    <meta property="og:title" content="Metarix - Automate Conversations, Accelerate Growth" />
+    <meta property="og:description" content="60% Cost Reduction. 100% Availability. Meet the future of AI Voice Agents." />
+    <meta property="og:image" content="https://www.metarix.ai/og-preview.jpg" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.metarix.ai" />
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script>
@@ -68,5 +78,42 @@
 </head>
   <body>
     <div id="root"></div>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ProfessionalService",
+      "name": "Metarix",
+      "image": "https://www.metarix.ai/logo.png",
+      "description": "AI Agency specializing in Voice Calling Agents and Business Automation Consulting.",
+      "priceRange": "$$$",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Coimbatore",
+        "addressCountry": "IN"
+      },
+      "makesOffer": [
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "AI Voice Agents",
+            "description": "24/7 Inbound and Outbound calling automation with sub-second latency."
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "AI Business Consulting",
+            "description": "Strategic implementation of LLMs and automation workflows."
+          }
+        }
+      ],
+      "sameAs": [
+        "https://www.linkedin.com/company/metarix",
+        "https://twitter.com/metarix"
+      ]
+    }
+    </script>
   </body>
 </html>
