--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
       }
     </script>
     <style>
+      /* Enforce no italic fonts globally */
+      * {
+        font-style: normal !important;
+      }
+      
       html {
         scroll-padding-top: 100px; /* Offset for fixed navbar */
       }
@@ -66,12 +71,14 @@
   <script type="importmap">
 {
   "imports": {
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "framer-motion": "https://esm.sh/framer-motion@^12.23.26",
+    "vite": "https://esm.sh/vite@^7.2.7",
     "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "lucide-react": "https://esm.sh/lucide-react@^0.561.0",
     "@google/genai": "https://esm.sh/@google/genai@^1.33.0",
-    "framer-motion": "https://esm.sh/framer-motion@^12.23.26"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
@@ -115,5 +122,7 @@
       ]
     }
     </script>
+    <!-- Vite Entry Point -->
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
